--- a/index.html
+++ b/index.html
@@ -465,15 +465,15 @@
           </div>
           <div class="card">
             <div class="video-container">
-              <iframe src="https://www.youtube.com/embed/uHKfrz65KSU?controls=0&autoplay=1&mute=1&loop=1&playlist=uHKfrz65KSU" title="Chim Team Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.onerror=null; this.parentElement.classList.add('video-error')"></iframe>
+              <iframe src="https://www.youtube.com/embed/uHKfrz65KSU?controls=0&autoplay=1&mute=1&loop=1&playlist=uHKfrz65KSU" title="Supply Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.onerror=null; this.parentElement.classList.add('video-error')"></iframe>
             </div>
             <div class="card-info-area">
               <div class="card-icon-container"><i class="fa-solid fa-users card-icon"></i></div>
               <div class="card-text-content">
-                <h2 class="card-title">Chim Team</h2>
-                <p class="card-description">Risk-free team challenges.</p>
+                <h2 class="card-title">Supply</h2>
+                <p class="card-description">From supply, with love, to you.</p>
               </div>
-              <button class="card-action-button" data-link="teams.html">Get</button>
+              <button class="card-action-button" data-link="supply.html">Get</button>
             </div>
           </div>
           </div>
@@ -876,7 +876,7 @@
                "maze.html": { title: "Chim Maze", description: "Immersive subject learning.", iconClass: "fa-solid fa-cube", defaultIconText: "CM", link: "maze.html", isProduct: true },
                "clinic.html": { title: "Chim Clinic", description: "Expert dev help & diagnostics.", iconClass: "fa-solid fa-laptop-medical", defaultIconText: "CL", link: "clinic.html", isProduct: true },
                "prompts.html": { title: "Chim Prompts", description: "AI prompt engineering tools.", iconClass: "fa-solid fa-terminal", defaultIconText: "CP", link: "prompts.html", isProduct: true },
-               "teams.html": { title: "Chim Team", description: "Risk-free team challenges.", iconClass: "fa-solid fa-users", defaultIconText: "TE", link: "teams.html", isProduct: true },
+               "supply.html": { title: "Supply", description: "From Supply, with love, to you.", iconClass: "fa-solid fa-users", defaultIconText: "TE", link: "supply.html", isProduct: true },
                "terms.html": { title: "Terms of Service", description: "Read our terms and conditions.", iconClass: "fa-solid fa-file-contract", defaultIconText: "ToS", link: "terms.html", isProduct: false },
                "support.html": { title: "Support Center", description: "Get help and support.", iconClass: "fa-solid fa-life-ring", defaultIconText: "Sup", link: "support.html", isProduct: false }
            };
@@ -886,7 +886,7 @@
                "maze": "maze.html", "chimmaze": "maze.html", "chim maze": "maze.html", "learning": "maze.html",
                "clinic": "clinic.html", "chimclinic": "clinic.html", "chim clinic": "clinic.html", "diagnostics": "clinic.html",
                "prompts": "prompts.html", "chimprompts": "prompts.html", "chim prompts": "prompts.html", "ai": "prompts.html",
-               "teams": "teams.html", "chimteam": "teams.html", "chim team": "teams.html",
+               "suply": "supply.html", "supply": "supply.html", "supply": "supply.html",
                "terms": "terms.html", "terms of service": "terms.html", "service terms": "terms.html",
                "support": "support.html", "support center": "support.html", "help": "support.html", "contact": "support.html"
            };
