--- a/supply.html
+++ b/supply.html
@@ -477,7 +477,7 @@
 
   <div class="w-full flex-grow flex flex-col items-center py-6 relative z-10 mt-16 sm:mt-0"> <main id="product-showcase" class="w-full max-w-7xl mb-16 px-4 sm:px-6">
         <h1 class="text-3xl sm:text-4xl font-bold text-center text-white glow-text mb-10 sm:mb-12">
-            Made from <span id="user-location" title="Click to change location">Lagos</span>
+            Made in <span id="user-location" title="Click to change location">Lagos</span>
         </h1>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
           <div class="card" id="product-wallet-card">
@@ -899,7 +899,7 @@
       // IMPORTANT: Replace "YOUR_API_KEY_HERE" with your actual geocode.maps.co API key.
       // WARNING: Exposing API keys client-side is a security risk for production applications.
       // Consider a server-side solution for a live website.
-      const GEOCODE_MAPS_CO_API_KEY = "YOUR_API_KEY_HERE"; 
+      const GEOCODE_MAPS_CO_API_KEY = "681b1c274ddc6654628463eag32adad"; 
 
 
       const prefilledDeliveryData = {
