--- a/supply.html
+++ b/supply.html
@@ -477,31 +477,31 @@
           </button>
           <div id="star-dropdown" class="nav-dropdown" role="menu"> 
             <div class="nav-dropdown-item" role="menuitem" data-action="buy-for-charity">
-              <img src="https://placehold.co/40x40/374151/FBBF24?text=C" alt="For Charity Icon" class="nav-dropdown-item-icon" onerror="this.onerror=null; this.src='https://placehold.co/40x40/374151/FFFFFF?text=C'; this.alt='Charity';">
+              <img src="charity.png" alt="For Charity Icon" class="nav-dropdown-item-icon" onerror="this.onerror=null; this.src='https://placehold.co/40x40/374151/FFFFFF?text=C'; this.alt='Charity';">
               <div class="nav-dropdown-item-content">
-                <div class="nav-dropdown-item-title">For Charity</div>
-                <div class="nav-dropdown-item-desc">Donate to our fund for teaching orphans digital skills.</div>
+                <div class="nav-dropdown-item-title">For Orphans</div>
+                <div class="nav-dropdown-item-desc">Educate an orphan for a year</div>
               </div>
               <button class="nav-dropdown-action-button" data-price="99">$99</button>
             </div>
             <div class="nav-dropdown-item" role="menuitem" data-action="buy-beyond-charity">
-              <img src="https://placehold.co/40x40/374151/A78BFA?text=B" alt="Beyond Charity Icon" class="nav-dropdown-item-icon" onerror="this.onerror=null; this.src='https://placehold.co/40x40/374151/FFFFFF?text=B'; this.alt='Beyond';">
+              <img src="beyond.png" alt="Beyond Charity Icon" class="nav-dropdown-item-icon" onerror="this.onerror=null; this.src='https://placehold.co/40x40/374151/FFFFFF?text=B'; this.alt='Beyond';">
               <div class="nav-dropdown-item-content">
-                <div class="nav-dropdown-item-title">Beyond Charity</div>
-                <div class="nav-dropdown-item-desc">Feed an orphan for a year.</div>
+                <div class="nav-dropdown-item-title">For Charity</div>
+                <div class="nav-dropdown-item-desc">Feed someone for a year.</div>
               </div>
               <button class="nav-dropdown-action-button" data-price="249">$249</button>
             </div>
             <div class="nav-dropdown-item" role="menuitem" data-action="buy-limelight">
-              <img src="https://placehold.co/40x40/374151/EC4899?text=L" alt="Limelight Icon" class="nav-dropdown-item-icon" onerror="this.onerror=null; this.src='https://placehold.co/40x40/374151/FFFFFF?text=L'; this.alt='Limelight';">
+              <img src="limelight.png" alt="Limelight Icon" class="nav-dropdown-item-icon" onerror="this.onerror=null; this.src='https://placehold.co/40x40/374151/FFFFFF?text=L'; this.alt='Limelight';">
               <div class="nav-dropdown-item-content">
-                <div class="nav-dropdown-item-title">Limelight</div>
+                <div class="nav-dropdown-item-title">LimeLight</div>
                 <div class="nav-dropdown-item-desc">Be the cover of supply today.</div>
               </div>
               <button class="nav-dropdown-action-button" data-price="499">$499</button>
             </div>
             <div class="nav-dropdown-item" role="menuitem" data-action="buy-care-package">
-              <img src="https://placehold.co/40x40/374151/34D399?text=P" alt="Care Package Icon" class="nav-dropdown-item-icon" onerror="this.onerror=null; this.src='https://placehold.co/40x40/374151/FFFFFF?text=P'; this.alt='Package';">
+              <img src="care.png" alt="Care Package Icon" class="nav-dropdown-item-icon" onerror="this.onerror=null; this.src='https://placehold.co/40x40/374151/FFFFFF?text=P'; this.alt='Package';">
               <div class="nav-dropdown-item-content">
                 <div class="nav-dropdown-item-title">Care Package</div>
                 <div class="nav-dropdown-item-desc">Rare collection from members.</div>
