--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
           </div>
           <div class="card">
             <div class="video-container">
-              <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ?controls=0&autoplay=1&mute=1&loop=1&playlist=3JZ_D3ELwOQ" title="Chim Clinic Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.onerror=null; this.parentElement.classList.add('video-error')"></iframe>
+              <iframe src="https://www.youtube.com/embed/3JZ_D3ELwOQ?controls=0&autoplay=1&mute=1&loop=1&playlist=3JZ_D3ELwOQ" title="Chim Clinic Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.parentElement.classList.add('video-error')"></iframe>
             </div>
             <div class="card-info-area">
               <div class="card-icon-container"><i class="fa-solid fa-laptop-medical card-icon"></i></div>
@@ -452,7 +452,7 @@
           </div>
           <div class="card">
             <div class="video-container">
-              <iframe src="https://www.youtube.com/embed/6avJHaC3C2U?controls=0&autoplay=1&mute=1&loop=1&playlist=6avJHaC3C2U" title="Chim Prompts Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.onerror=null; this.parentElement.classList.add('video-error')"></iframe>
+              <iframe src="https://www.youtube.com/embed/6avJHaC3C2U?controls=0&autoplay=1&mute=1&loop=1&playlist=6avJHaC3C2U" title="Chim Prompts Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.parentElement.classList.add('video-error')"></iframe>
             </div>
             <div class="card-info-area">
               <div class="card-icon-container"><i class="fa-solid fa-terminal card-icon"></i></div>
@@ -465,7 +465,7 @@
           </div>
           <div class="card">
             <div class="video-container">
-              <iframe src="https://www.youtube.com/embed/uHKfrz65KSU?controls=0&autoplay=1&mute=1&loop=1&playlist=uHKfrz65KSU" title="Supply Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.onerror=null; this.parentElement.classList.add('video-error')"></iframe>
+              <iframe src="https://www.youtube.com/embed/uHKfrz65KSU?controls=0&autoplay=1&mute=1&loop=1&playlist=uHKfrz65KSU" title="Supply Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.parentElement.classList.add('video-error')"></iframe>
             </div>
             <div class="card-info-area">
               <div class="card-icon-container"><i class="fa-solid fa-users card-icon"></i></div>
@@ -474,6 +474,45 @@
                 <p class="card-description">From supply, with love, to you.</p>
               </div>
               <button class="card-action-button" data-link="supply.html">Get</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0&autoplay=1&mute=1&loop=1&playlist=dQw4w9WgXcQ" title="Chim Farms Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.parentElement.classList.add('video-error')"></iframe>
+            </div>
+            <div class="card-info-area">
+              <div class="card-icon-container"><i class="fa-solid fa-seedling card-icon"></i></div>
+              <div class="card-text-content">
+                <h2 class="card-title">Chim Farms</h2>
+                <p class="card-description">Virtual farming and resource management.</p>
+              </div>
+              <button class="card-action-button" data-link="chimfarms.html">Get</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/9bZkp7q19f0?controls=0&autoplay=1&mute=1&loop=1&playlist=9bZkp7q19f0" title="Club Belong Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.parentElement.classList.add('video-error')"></iframe>
+            </div>
+            <div class="card-info-area">
+              <div class="card-icon-container"><i class="fa-solid fa-users-rectangle card-icon"></i></div>
+              <div class="card-text-content">
+                <h2 class="card-title">Club Belong</h2>
+                <p class="card-description">Find your community and interests.</p>
+              </div>
+              <button class="card-action-button" data-link="clubbelong.html">Get</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="video-container">
+              <iframe src="https://www.youtube.com/embed/ZyhrYis509A?controls=0&autoplay=1&mute=1&loop=1&playlist=ZyhrYis509A" title="FiveTaps Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen onerror="this.parentElement.classList.add('video-error')"></iframe>
+            </div>
+            <div class="card-info-area">
+              <div class="card-icon-container"><i class="fa-solid fa-hand-pointer card-icon"></i></div>
+              <div class="card-text-content">
+                <h2 class="card-title">FiveTaps</h2>
+                <p class="card-description">Simplified mobile interaction system.</p>
+              </div>
+              <button class="card-action-button" data-link="fivetaps.html">Get</button>
             </div>
           </div>
           </div>
@@ -878,7 +917,10 @@
                "prompts.html": { title: "Chim Prompts", description: "AI prompt engineering tools.", iconClass: "fa-solid fa-terminal", defaultIconText: "CP", link: "prompts.html", isProduct: true },
                "supply.html": { title: "Supply", description: "From Supply, with love, to you.", iconClass: "fa-solid fa-users", defaultIconText: "TE", link: "supply.html", isProduct: true },
                "terms.html": { title: "Terms of Service", description: "Read our terms and conditions.", iconClass: "fa-solid fa-file-contract", defaultIconText: "ToS", link: "terms.html", isProduct: false },
-               "support.html": { title: "Support Center", description: "Get help and support.", iconClass: "fa-solid fa-life-ring", defaultIconText: "Sup", link: "support.html", isProduct: false }
+               "support.html": { title: "Support Center", description: "Get help and support.", iconClass: "fa-solid fa-life-ring", defaultIconText: "Sup", link: "support.html", isProduct: false },
+               "chimfarms.html": { title: "Chim Farms", description: "Virtual farming and resource management.", iconClass: "fa-solid fa-seedling", defaultIconText: "CF", link: "chimfarms.html", isProduct: true },
+               "clubbelong.html": { title: "Club Belong", description: "Find your community and interests.", iconClass: "fa-solid fa-users-rectangle", defaultIconText: "CB", link: "clubbelong.html", isProduct: true },
+               "fivetaps.html": { title: "FiveTaps", description: "Simplified mobile interaction system.", iconClass: "fa-solid fa-hand-pointer", defaultIconText: "FT", link: "fivetaps.html", isProduct: true }
            };
            const searchKeywords = {
                "chimcode": "chimcode.html", "chim code": "chimcode.html", "code": "chimcode.html", "debug": "chimcode.html",
@@ -888,7 +930,10 @@
                "prompts": "prompts.html", "chimprompts": "prompts.html", "chim prompts": "prompts.html", "ai": "prompts.html",
                "suply": "supply.html", "supply": "supply.html", "supply": "supply.html",
                "terms": "terms.html", "terms of service": "terms.html", "service terms": "terms.html",
-               "support": "support.html", "support center": "support.html", "help": "support.html", "contact": "support.html"
+               "support": "support.html", "support center": "support.html", "help": "support.html", "contact": "support.html",
+               "farms": "chimfarms.html", "chimfarms": "chimfarms.html", "chim farms": "chimfarms.html", "farming": "chimfarms.html",
+               "belong": "clubbelong.html", "club": "clubbelong.html", "club belong": "clubbelong.html", "community": "clubbelong.html",
+               "fivetaps": "fivetaps.html", "five taps": "fivetaps.html", "taps": "fivetaps.html", "mobile": "fivetaps.html"
            };
 
            function performSearch(query) {
