--- a/support.html
+++ b/support.html
@@ -390,7 +390,7 @@
             <i class="fas fa-chevron-down chevron"></i>
           </summary>
           <div class="faq-answer">
-            <p>Membership management, including viewing history, cancellation, and refund requests, is handled through our Billing page. You'll typically need to be signed in to access your specific billing details.</p>
+            <p>Membership management, including viewing history, cancellation, and refund requests, is handled through our Billing page. You'll need to be signed in to access your specific billing details.</p>
             <a href="billing.html" class="action-button">
               <i class="fas fa-credit-card mr-2"></i>Go to Billing
             </a>
