--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
 
       /* Google Sign-In Button Custom Styling (May need adjustment with Google's rendered button) */
       /* This targets the container where Google's button is rendered */
-      #google-auth-button-slot {
-        /* Add any container-specific styles if needed.
-           The .nav-button-container class is already applied.
-           Direct styling of Google's button internals is limited. */
-      }
       /* These styles were attempting to style Google's button directly.
          They might have some effect if Google's button structure matches,
          but rely on renderButton options primarily. */
@@ -837,7 +832,7 @@
             <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-2 justify-center">
                 <img src="logo.jpg" alt="Fromsupply Logo" class="h-6 w-6 rounded-sm inline-block" onerror="this.onerror=null; this.style.display='none'; const newImg = document.createElement('span'); newImg.textContent='FS'; newImg.classList.add('w-6', 'h-6', 'rounded-sm', 'bg-gray-700', 'text-white', 'flex', 'items-center', 'justify-center', 'font-bold'); this.parentNode.insertBefore(newImg, this); this.remove();"> Fromsupply <span id="app-version-display" class="text-xs font-normal text-gray-500 opacity-75">fs v</span>
             </h3>
-            <p class="text-gray-400 text-sm mb-6 text-center">Building the future of developer tools and experiences through innovative solutions.</p>
+            <p class="text-gray-400 text-sm mb-6 text-center">we make it real amd we make it good!.</p>
             <div class="flex space-x-3 justify-center">
                 <a href="https://github.com/chimwopara/fromsupply" target="_blank" rel="noopener noreferrer" class="w-8 h-8 rounded-full bg-gray-800 hover:bg-gray-700 flex items-center justify-center text-gray-400 social-icon"><i class="fab fa-github"></i></a>
                 <a href="https://instagram.com/fromsupply" target="_blank" rel="noopener noreferrer" class="w-8 h-8 rounded-full bg-gray-800 hover:bg-gray-700 flex items-center justify-center text-gray-400 social-icon"><i class="fab fa-instagram"></i></a>
